Makefile: dist-checksum rule fix

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ changelog:
 
 dist-checksum: $(DIST_TARGETS)
 	rm -f *.md5 *.sha256
-	for sum in '$(DIST_ARCHIVES)'; do \
+	for sum in $(DIST_ARCHIVES); do \
 	  md5sum $$sum > $$sum.md5 && \
 	  sha256sum $$sum > $$sum.sha256; \
 	done
