Add new API for chaining PSI table decoders based on table_id and extension (subtable_id).
This API deprecates the dvbpsi_demux* API.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,13 +7,14 @@ lib_LTLIBRARIES = libdvbpsi.la
 libdvbpsi_la_SOURCES = dvbpsi.c dvbpsi_private.h \
                        psi.c \
                        demux.c \
+                       chain.c \
                        descriptor.c \
                        $(tables_src) \
                        $(descriptors_src)
 
 libdvbpsi_la_LDFLAGS = -version-info 11:0:0 -no-undefined
 
-pkginclude_HEADERS = dvbpsi.h psi.h descriptor.h demux.h \
+pkginclude_HEADERS = dvbpsi.h psi.h descriptor.h demux.h chain.h \
                      tables/pat.h tables/pmt.h tables/sdt.h tables/eit.h \
                      tables/cat.h tables/nit.h tables/tot.h tables/sis.h \
 		     tables/bat.h tables/rst.h \
