--- a/misc/Makefile.am
+++ b/misc/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 noinst_PROGRAMS = gen_crc gen_pat gen_pmt \
-                  test_dr
+                  test_dr test_chain
 
 gen_crc_SOURCES = gen_crc.c
 
@@ -13,6 +13,9 @@ gen_pmt_SOURCES = gen_pmt.c
 gen_pmt_CPPFLAGS = -DDVBPSI_DIST
 gen_pmt_LDFLAGS = -L../src -ldvbpsi
 
+test_chain_SOURCES = test_chain.c
+test_chain_CPPFLAGS = -DDVBPSI_DIST
+test_chain_LDFLAGS = -L../src -ldvbpsi
 
 test_dr_SOURCES = test_dr.c
 test_dr_CPPFLAGS = -DDVBPSI_DIST
