--- a/doc/doxygen.cfg
+++ b/doc/doxygen.cfg
@@ -44,7 +44,7 @@ PROJECT_NUMBER         = 2.0.0-git
 # for a project that appears at the top of each page and should give viewer a
 # quick idea about the purpose of the project. Keep the description short.
 
-PROJECT_BRIEF          =
+PROJECT_BRIEF          = MPEG Transport Stream PSI table parser
 
 # With the PROJECT_LOGO tag one can specify a logo or an icon that is included
 # in the documentation. The maximum height of the logo should not exceed 55
