--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 EXTRA_DIST=index.doxygen structure.doxygen usage.doxygen newdec.doxygen \
-	   howto-new-api.doxygen \
+	   howto-new-api.doxygen migrate-v1-to-v2.doxygen \
            decoder.dot doxygen.cfg
 
 MOSTLYCLEANFILES=decoder.png
