--- a/doc/doxygen.cfg
+++ b/doc/doxygen.cfg
@@ -763,6 +763,7 @@ INPUT                  = index.doxygen \
                          usage.doxygen \
                          newdec.doxygen \
                          howto-new-api.doxygen \
+                         migrate-v1-to-v2.doxygen \
                          ../src \
                          ../src/tables \
                          ../src/descriptors
