doxygen: rename howto-new-api.doxygen to migrate-v0-to-v1.doxygen

--- a/doc/doxygen.cfg
+++ b/doc/doxygen.cfg
@@ -762,7 +762,7 @@ INPUT                  = index.doxygen \
                          structure.doxygen \
                          usage.doxygen \
                          newdec.doxygen \
-                         howto-new-api.doxygen \
+                         migrate-v0-to-v1.doxygen \
                          migrate-v1-to-v2.doxygen \
                          ../src \
                          ../src/tables \
