actually validate the XML with the DTD
(cherry picked from commit cad974085df8cf9ec812a8ed884d9e3e278f15d4)
Signed-off-by: Jean-Paul Saman <jpsaman@videolan.org>

--- a/misc/Makefile.am
+++ b/misc/Makefile.am
@@ -26,5 +26,6 @@ noinst_HEADERS = test_dr.h test_dr_cmp.h
 EXTRA_DIST=dr.dtd dr.xml dr.xsl
 
 test_dr.c: dr.dtd dr.xml dr.xsl
+	xmllint --noout --valid dr.xml
 	xsltproc -o test_dr.c dr.xsl dr.xml
 
