--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -50,6 +50,7 @@ mpegdrinclude_HEADERS = descriptors/mpeg/dr_02.h \
                      descriptors/mpeg/dr_1e.h \
                      descriptors/mpeg/dr_1f.h \
                      descriptors/mpeg/dr_20.h \
+                     descriptors/mpeg/dr_23.h \
                      descriptors/mpeg/dr_24.h
 
 dvbdrincludedir = $(pkgincludedir)/dvb
@@ -126,6 +127,7 @@ descriptors_src = descriptors/mpeg/dr_02.c \
                   descriptors/mpeg/dr_1e.c \
                   descriptors/mpeg/dr_1f.c \
                   descriptors/mpeg/dr_20.c \
+                  descriptors/mpeg/dr_23.c \
                   descriptors/mpeg/dr_24.c \
 		  descriptors/dvb/dr_40.c \
 		  descriptors/dvb/dr_41.c \
